<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editTextTexta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        android:hint="@string/a"
        />

    <EditText
        android:id="@+id/editTextTextb"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text=""
        android:hint="@string/b"
        />

    <EditText
        android:id="@+id/editTextTextc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:hint="@string/c"
        android:text="" />


    <EditText
        android:id="@+id/editTextTextd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/d"
        android:minHeight="48dp"
        android:text="" />

    <TextView
        android:id="@+id/textViewre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:hint="@string/re"/>

    <TextView
        android:id="@+id/textViewim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/im"
        android:text="" />
    <Button
        android:id="@+id/buttonmul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:hint="@string/multi"/>

    <Button
        android:id="@+id/buttondiv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:hint="@string/divid"/>

    <Button
        android:id="@+id/buttonsend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:hint="Send"/>

    <EditText
        android:id="@+id/editTextForSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name" />

</LinearLayout>